--- a/src/scss/_first-page.scss
+++ b/src/scss/_first-page.scss
@@ -22,6 +22,7 @@ body {
 			display: flex;
 			flex-direction: column;
 			gap: 2rem;
+			max-width: 400px;
 			padding: 1.5rem;
 			text-align: center;
 			p {
@@ -62,14 +63,17 @@ body {
 			display: flex;
 			flex-direction: column;
 			gap: 10px;
+			text-align: center;
 			button {
 				border: none;
 				border-radius: 15px;
 				cursor: pointer;
 				font-weight: 700;
 				letter-spacing: 1px;
-				padding: 1.2rem;
 				width: 100%;
+				max-width: 400px;
+				margin: auto;
+				padding: 1.2rem;
 			}
 			&-solo-btn {
 				background-color: $light-yellow;
